# SnakeAi

./: CMakeLists.txt
src/: snake.cpp
